// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationIcon should render with custom icon content 1`] = `
.circuit-0 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-0 circuit-1"
>
  <div>
    Custom content
  </div>
</div>
`;

exports[`NotificationIcon should render with default styles 1`] = `
.circuit-0 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`NotificationIcon should render with error icon 1`] = `
.circuit-1 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-1 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-1 circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.786 15.214l6.429-6.428m-6.429 0l6.429 6.428M12 21a9 9 0 100-18 9 9 0 000 18z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;

exports[`NotificationIcon should render with warning icon 1`] = `
.circuit-1 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-1 {
    margin: 0 16px 0 0;
  }
}

.circuit-0 {
  color: #D8A413;
}

<div
  class="circuit-1 circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 12.643V6.857m0 10.286V16.5m0 4.5a9 9 0 100-18 9 9 0 000 18z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
</div>
`;
